# KeplersHorizon

./: .clang-format  .gitignore  BUILD.md  CONTRIBUTING.md  LICENSE  README.md
docs/: RULES.md  TERMINOLOGY.md
setup/: APACHE_SITE_SNIPPET.txt
site/db/: HINTS.md  hexes.csv  schema.sql  seed.sql  star_systems.csv  warpline_hexes.csv  warplines.csv
site/server/: .gitignore  CMakeLists.txt  doit.sh
site/server/inc/: app.h  args.h  cmd.h  comms.h  db.h  events.h  game.h  json.h  state.h  typs.h  util.h
site/server/src/: args.cpp  cmd.cpp  comms.cpp  db.cpp  events.cpp  game.cpp  json.cpp  login.cpp  logout.cpp  main.cpp  state.cpp  util.cpp
site/tools/: gen_map_view.pl
site/web/: behavior.js  constraints.js  index.html  interface.js  map_view.html  map_view.template.html  slate.js
